--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Toast Notif</title>
+    <title>Notif App</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="container"></div>
-    <button id="btn">click Me, Please!</button>
+    <button id="btn">click Me!</button>
     <script src="main.js"></script>
   </body>
 </html>
